--- a/src/content/posts/C study/입력, 연산자.md
+++ b/src/content/posts/C study/입력, 연산자.md
@@ -1,10 +1,10 @@
 ---
-title: C언어 데이터 출력/입력, 연산자
+title: 01 데이터 출력/입력, 연산자
 published: 2025-07-15
 description: ''
 image: ''
 tags: []
-category: ''
+category: 'C'
 draft: false 
 lang: ''
 ---
