--- a/src/content/posts/C study/01.md
+++ b/src/content/posts/C study/01.md
@@ -1,7 +1,7 @@
 ---
-title: 01 데이터 출력/입력, 연산자
+title: 01 데이터 입출력, 연산자
 published: 2025-07-19
-description: '혼공C 참고'
+description: '혼공C 01-04'
 image: ''
 tags: [C]
 category: 'C'
@@ -130,10 +130,10 @@ int main (void){
 ```C
 char fruit[6] = "apple";
 ``` 
-컴파일러가 문자열의 끝에 `\0`(널문자)를 자동으로 추가하기 때문에 배열을 크기를 하나 더 크게 잡아야 함
+컴파일러가 문자열의 끝에 `\0`(널문자)를 자동으로 추가하기 때문에 배열을 크기를 하나 더 크게 잡아야 함  
 출력은 %s로 출력함
 
-string.h 헤더파일을 포함하여 `strcpy`(string copy)함수로도 문자열을 저장할 수 있음
+string.h 헤더파일을 포함하여 `strcpy`(string copy)함수로도 문자열을 저장할 수 있음  
 `strcpy(복사할 배열명, 문자열 또는 배열)`의 형태로 사용
 ```C
 #include <stdio.h>
@@ -170,7 +170,7 @@ C programming
 ```
 
 ### const를 사용한 변수 : 변수를 상수처럼
-`const 자료형 변수명 = 값;`의 형태로 사용
+`const 자료형 변수명 = 값;`의 형태로 사용  
 초기화 된 값을 바꿀 수 없음
 
 ### 예약어/식별자
@@ -186,7 +186,7 @@ C programming
 :::
 
 ## 데이터 입력
-`scanf` : scan formatted
+`scanf` : scan formatted  
 `scanf("%변환문자", &변수명)`의 형태로 사용, 입력할 **변수 앞에 &**(ampersand)를 붙임
 ```C
 scanf("%d", &a);
@@ -197,11 +197,11 @@ scanf("%d", &a);
 scanf("%d%lf", &a, &b);
 ```
 :::note
-문자열을 입력할 땐 배열명에 &를 붙이지 않는다.
+문자열을 입력할 땐 배열명에 &를 붙이지 않는다.  
 공백을 만나면 공백 이전까지만 저장된다.
 :::
 
-::tip
+:::tip
 int : %d 
 float : %f
 double : %lf
@@ -217,11 +217,11 @@ char배열 : %s
 =. 오른쪽 수식의 결과를 왼쪽 변수에 저장한다.
 
 ## 증감 연산자
-`++a;`와 `a = a+1;`은 같은 표현이다. `--`도 사용 가능하다.
+`++a;`와 `a = a+1;`은 같은 표현이다. `--`도 사용 가능하다.  
 증감 연산자의 피연산자로는 상수(고정된 수)를 직접 사용할 수 없다.
 
 :::note
-전위 표기 : ++a. 값이 증감하고 나서 연산에 사용
+전위 표기 : ++a. 값이 증감하고 나서 연산에 사용  
 후위 표기 : a++. 연산에 사용하고 나서 값이 증감
 :::
 ```C
@@ -252,11 +252,53 @@ int main(void){
 :::
 
 ## 형 변환 연산자
-피연산자의 값을 복사해 일시적으로 형태를 바꾼다.
+피연산자의 값을 복사해 일시적으로 형태를 바꾼다.  
 `(자료형)피연산자`의 형태로 사용한다
 
-> [!note]
-> 기본적으로는 int형을 이용하고 실수 연산이 필요할 때 형 변환을 하여 사용한다.
-> 실수(double)에서 정수(int) 부분을 추릴 때 소수점 이하의 값은 무조건 버림한다.
+:::note
+기본적으로는 int형을 이용하고 실수 연산이 필요할 때 형 변환을 하여 사용한다.  
+실수(double)에서 정수(int) 부분을 추릴 때 소수점 이하의 값은 무조건 버림한다.
+:::
 
 ## sizeof 연산자
+피연산자의 크기를 바이트 단위로 계산해서 알려준다.  
+`sizeof(자료형)` 또는 `sizeof(상수)`로 사용한다. 수식이나 변수가 들어가도 OK.
+
+## 복합대입 연산자
++=, -=, /=, %=, *=  
+연산 결과를 피연산자에 저장할 필요가 있는 경우 사용한다.
+
+```C
+a += 20; //a+20의 결과를 다시 a에 저장
+```
+
+## 콤마 연산자
+수식을 나열할 때 사용한다. 
+
+:::note
+우선순위가 대입 > 콤마 연산자 순이므로 =과 ,를 함께 사용할 경우 괄호 처리를 해주어야 한다.  
+`res = (++a, ++b);` : ++a 연산 후 ++b 연산을 하고 마지막에 연산한 ++b의 값을 res에 저장  
+`res = ++a, ++b;` : ++a를 연산 후 res값에 저장하고 ++b를 연산(버려지는 값)
+:::
+
+## 조건 연산자(제어문)
+? 와 : 을 사용해 표현한다.  
+첫번째 피연산자가 참이면 두번째 피연산자가 결괏값, 거짓이면 세번째 피연산자가 결괏값이 된다.
+```C
+res = (a > b) ? a : b
+```
+
+## 비트 연산자 
+비트 논리 연산자(&, |, ^)와 비트 이동 연산자(>>, <<)가 있다.  
+한 번에 두개의 비트끼리 연산한다.  
+- 논리곱(&) : 두 비트가 모두 1인 경우만 1로 계산
+- 배타적 논리합(^) : 두 비트가 서로 다른 경우만 1로 계산
+- 논리합(|) : 두 비트 중에서 하나라도 참이면 1로 계산
+- 부정(~) : 1을 0으로 0을 1로 변환(피연산자가 하나)
+- 이동 : >>는 오른쪽, <<는 왼쪽으로 이동시킴. 밀려나는 비트는 사라지고, 남는(빈) 비트는 0으로 채워짐
+
+:::tip
+연산자 우선순위
+- 단항 > 이항 > 삼항 연산자 순서
+- 산술 > 비트이동 > 관계 > 논리 연산자 순서
+:::
