--- a/src/content/posts/Cstudy/02.md
+++ b/src/content/posts/Cstudy/02.md
@@ -1,10 +1,10 @@
 ---
-title: 02
+title: 02 선택문
 published: 2025-07-20
-description: ''
+description: '혼공C 05'
 image: ''
-tags: []
-category: ''
+tags: [C]
+category: 'C'
 draft: false 
 lang: ''
 ---
